--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nft-view",
   "version": "0.1.0",
-  "homepage": "./",
+  "homepage": "/",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
